missing NULL checks in libnet in interface iteration and potential resource leak in getMacAddress

XMLWordPrintable

    • b04
    • generic
    • os_x
    • Not verified

        In NetworkInterface.c and Inet6AddressImpl.c we have some coding that omits checking for ifa_addr == NULL when iterating on the result of the getifaddrs call. This is similar to what has been fixed in hotspot with

        https://bugs.openjdk.java.net/browse/JDK-8208676

        The issues are in the bsd/macOS coding. However bsd/macOS also document that ifa_addr can be NULL in special cases (not sure how likely it is to see it "in the wild").
        See
        https://www.freebsd.org/cgi/man.cgi?getifaddrs
        https://developer.apple.com/library/archive/documentation/System/Conceptual/ManPages_iPhoneOS/man3/getifaddrs.3.html

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: