8216355: missing NULL checks in libnet in interface iteration and potential resource leak in getMacAddress

Reviewed-by: clanger, rwestberg